create Room Database , retrfit and feach data and show it in home view , create details fragment Ui and create Favourit fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,14 @@
         android:id="@+id/navigation_home"
         android:name="com.example.movieapp.ui.home.view.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_navigation_home_to_details"
+            app:destination="@id/details" />
+        <action
+            android:id="@+id/action_navigation_home_to_details2"
+            app:destination="@id/details" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
@@ -18,8 +25,28 @@
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.movieapp.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_fav"
+        android:name="com.example.movieapp.ui.fav.view.FavouriteFragment"
+        android:label="@string/Favourite"
+        tools:layout="@layout/fragment_favourite" >
+        <argument
+            android:name="data"
+            app:argType="com.example.movieapp.model.pojo.Result"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
+    <fragment
+        android:id="@+id/details"
+        android:name="com.example.movieapp.ui.home.view.Details"
+        android:label="fragment_details"
+        tools:layout="@layout/fragment_details" >
+        <argument
+            android:name="data"
+            app:argType="com.example.movieapp.model.pojo.Result"
+            app:nullable="true"
+            android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_details_to_navigation_fav"
+            app:destination="@id/navigation_fav" />
+    </fragment>
 </navigation>
