making some update in deatails fragment

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -34,6 +34,9 @@
             app:argType="com.example.movieapp.model.pojo.Result"
             app:nullable="true"
             android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_navigation_fav_to_details"
+            app:destination="@id/details" />
     </fragment>
     <fragment
         android:id="@+id/details"
@@ -45,8 +48,5 @@
             app:argType="com.example.movieapp.model.pojo.Result"
             app:nullable="true"
             android:defaultValue="@null" />
-        <action
-            android:id="@+id/action_details_to_navigation_fav"
-            app:destination="@id/navigation_fav" />
     </fragment>
 </navigation>
