--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,9 +20,9 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.movieapp.ui.dashboard.DashboardFragment"
+        android:name="com.example.movieapp.ui.search.SearchFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_search" />
 
     <fragment
         android:id="@+id/navigation_fav"
