--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,10 +8,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
-    <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        <item
+            android:id="@+id/navigation_search"
+            android:icon="@drawable/youtube_searched"
+            android:title="@string/Search" />
 
     <item
         android:id="@+id/navigation_fav"
