--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
+    android:label="@string/Search"
     app:startDestination="@+id/navigation_home">
 
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.movieapp.ui.home.view.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_navigation_home_to_details"
             app:destination="@id/details" />
@@ -19,21 +20,25 @@
     </fragment>
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.movieapp.ui.search.SearchFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_search" />
+        android:id="@+id/navigation_search"
+        android:name="com.example.movieapp.ui.search.view.SearchFragment"
+        android:label="Search"
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_navigation_search_to_details"
+            app:destination="@id/details" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_fav"
         android:name="com.example.movieapp.ui.fav.view.FavouriteFragment"
         android:label="@string/Favourite"
-        tools:layout="@layout/fragment_favourite" >
+        tools:layout="@layout/fragment_favourite">
         <argument
             android:name="data"
+            android:defaultValue="@null"
             app:argType="com.example.movieapp.model.pojo.Result"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:nullable="true" />
         <action
             android:id="@+id/action_navigation_fav_to_details"
             app:destination="@id/details" />
